--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,19 @@ button {
     width: 100%;
 }
 
+
+/* #222222
+#383838 */
+
+.home__about-row .content {
+    
+}
+
+.home__about-row {
+    background: linear-gradient(#222222,#383838);
+    padding: 50px 0 50px 50px;
+}
+
 .bracket {
     color: #FC91F2;
 }
@@ -252,9 +265,9 @@ button {
     position: relative;
     /* display: flex;
     align-items: center; */
-    margin: 150px auto;
+    /* margin: 150px auto; */
     width: 100%;
-    padding-bottom: 36%;
+    padding-bottom: 28%;
     padding-top: 8%;
 }
 
@@ -270,12 +283,13 @@ button {
 }
 
 .home__about-vector {
-    background: url('../assets/images/vector-5.svg') no-repeat;
+    /* background: url('../assets/images/vector-5.svg') no-repeat;
     height: 189px;
     width: 211px;
     position: absolute;
     right: -130px;
-    bottom: -190px;
+    bottom: -60px; */
+    display: none;
 }
 
 .home__about img {
@@ -284,6 +298,7 @@ button {
     right: 0;
     width: 100%;
     max-width: 400px;
+    bottom: 1px;
 }
 
 .home__about h2 {
@@ -326,8 +341,10 @@ button {
     width: 112px;
     position: absolute;
     right: 0;
-    bottom: 300px;
+    top: -210px;
+    /* bottom: 300px; */
 }
+
 
 .home__cta-vector-2 {
     background: url('../assets/images/vector-7.svg') no-repeat;
@@ -335,7 +352,7 @@ button {
     width: 211px;
     position: absolute;
     left: -60px;
-    bottom: -200px;
+    bottom: 30px;
 }
 
 footer {
@@ -746,6 +763,64 @@ footer h4 {
     transform: translateY(1038px);
     visibility: hidden;
 } */
+
+.home__form {
+    position: relative;
+    padding-bottom: 12%;
+}
+
+.home__form h2 {
+    font-size: 64px;
+}
+
+.home__form .content {
+    max-width: 718px;
+    margin-right: 20px;
+}
+
+.home__form-row {
+    display: flex;
+    align-items: center;
+    max-width: 1174px;
+    margin: 0 auto;
+}
+
+.form-field-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+}
+
+form {
+    width: 430px;
+    max-width: 100%;
+}
+
+label {
+    font-size: 14px;
+    margin-bottom: 0.5rem;
+    color: #EDEDED;
+    font-family: 'Source Code Pro', sans-serif;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    background: #2C2C2C;
+    font-size: 1rem;
+    padding: 12px 16px;
+    border: transparent;
+    color: #fff;
+}
+
+.home__form .button-primary {
+    width: 100%;
+}
 
 @media (max-width: 499px) {
     h1, h2 {
